Fixing button alignment issue on swap to landscape

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -796,6 +796,8 @@ button#create-scrapbook-button
 
 /* ==================================== BROWSE */
 
+.viewingInfo
+  float: left
 
 #contentHeader
   padding: 2em 0
@@ -2236,6 +2238,9 @@ header .navbar .navbar-collapse ul.nav li a.feedback
       *
         float: none !important
 
+  .viewingInfo
+    float: none
+
   #scrapbook, .memory.full
     #contentHeader
       text-align: center
@@ -2328,7 +2333,6 @@ header .navbar .navbar-collapse ul.nav li a.feedback
 
 /* iPhone Portrait */
 @media only screen and (max-device-width: 375px) and (orientation: portrait)
-
 
 
 /* iPhone Landscape */
